--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="col-md-6">
                     <h1>Selim Hossain</h1>
                     <div class="page-scroll">
-                        <p class="job-title">Graphic Deginer, UI / UX Deginer, and Data Scientist</p>
+                        <p class="job-title">Graphic Designer, UI / UX Designer, and Data Scientist</p>
                         <!-- <a href="#contact" class="btn btn-fill ">Hire me</a> -->
                         <div class="clearfix visible-xxs"></div>
                         <!-- <a href="#portfolio" class="btn btn-border">Explore more</a> -->
