--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                         <div class="service">
                             <br><br><br><br><br>
                             <img src="assets/img/ui.png" alt="Coding" width="150" height="150">
-                            <h4>UI / UX Deginer </h4>
+                            <h4>UI / UX Designer </h4>
                             <p>Create visually appealing interfaces that effectively communicate information, enhance usability, and align with brand identity guidelines.</p><br>
                             <p> Use tools such as Sketch, Adobe XD, or Figma to create wireframes, prototypes, and mockups, allowing for rapid iteration and feedback.</p><br>
                             <p>Apply a human-centered approach to problem-solving, incorporating empathy, ideation, prototyping, and testing to iteratively improve designs.</p>
